# cargo-get-docs

./: Cargo.toml  README.md
notes/: CODE_STRUCTURE.md
src/: application.rs  config.rs  error.rs  lib.rs  main.rs  page.rs  page_manager.rs  utils.rs
tests/: utils.rs
