[package]
name = "cargo-get-docs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
color-eyre = "0.6.2"
reqwest = { version = "0.11.14", features = ["blocking"] }
thiserror = "1.0.38"
